<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/reglayout"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal">
		<TextView
			android:layout_height="wrap_content"
			android:id="@+id/registerTxt"
			android:layout_width="wrap_content"
			android:textSize="20dp"
			android:layout_marginTop="15dp"
			android:text="@string/registration">
		</TextView>
	</RelativeLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingLeft="10px"
		android:paddingTop="15px">
		<ImageButton
			android:id="@+id/userImage"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:src="@drawable/icon">
		</ImageButton>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingLeft="10px">
			<TextView
				android:id="@+id/fnameTxt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/fname">
			</TextView>
			<EditText
				android:id="@+id/fnameTxtBox"
				android:layout_height="30dp"
				android:layout_width="180dp"
				android:textSize="10px">
			</EditText>
			<TextView
				android:id="@+id/lnameTxt"
				android:layout_height="wrap_content"
				android:text="@string/lname"
				android:layout_width="wrap_content"
				android:layout_alignRight="@+id/fnameTxt">
			</TextView>

			<EditText
				android:id="@+id/lnameTxtBox"
				android:layout_height="30dp"
				android:layout_width="180dp"
				android:inputType="textPersonName"
				android:layout_below="@+id/lnameTxt"
				android:layout_alignLeft="@+id/fnameTxtBox"
				android:textSize="10px">
			</EditText>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingLeft="20px"
		android:paddingTop="10px">
		<TextView
			android:id="@+id/emailTxt"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/email"
			android:layout_gravity="center">
		</TextView>

		<EditText
			android:layout_width="200dp"
			android:inputType="textEmailAddress"
			android:textSize="10px"
			android:layout_height="30dp"
			android:id="@+id/emailTxtBox">
		</EditText>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingLeft="20px"
		android:paddingTop="10px">
		<TextView
			android:id="@+id/passwordTxt"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/password"
			android:layout_gravity="center">
		</TextView>
		<EditText
			android:id="@+id/passwordTxtBox"
			android:layout_width="200dp"
			android:inputType="textPassword"
			android:textSize="10px"
			android:layout_height="30dp">
		</EditText>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingLeft="20px"
		android:paddingTop="10px">
		<TextView
			android:id="@+id/cfmPwTxt"
			android:layout_height="35dp"
			android:text="@string/cfmPassword"
			android:layout_width="80dp"
			android:layout_gravity="center">
		</TextView>

		<EditText
			android:id="@+id/cfmPwTxtBox"
			android:inputType="textPassword"
			android:layout_width="200dp"
			android:layout_height="30dp"
			android:textSize="10px">
		</EditText>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingLeft="20px">
		<TextView
			android:layout_width="80dp"
			android:id="@+id/genderTxt"
			android:layout_height="wrap_content"
			android:text="@string/gender"
			android:layout_gravity="center">
		</TextView>

		<RadioGroup
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal"
			android:id="@+id/gender">
			<RadioButton
				android:id="@+id/male"
				android:layout_width="80dp"
				android:layout_height="wrap_content"
				android:text="Male"
				android:button="@drawable/radio">
			</RadioButton>
			<RadioButton
				android:id="@+id/female"
				android:layout_height="wrap_content"
				android:text="Female"
				android:layout_width="90dp"
				android:button="@drawable/radio">
			</RadioButton>
		</RadioGroup>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingLeft="20px">
		<TextView
			android:id="@+id/bdateTxt"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/birthdate">
		</TextView>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<Button
				android:id="@+id/bdateBtn"
				android:layout_width="wrap_content"
				android:layout_alignTop="@+id/bdateTxt"
				android:layout_alignLeft="@+id/gender"
				android:layout_height="35dp"
				android:text="@string/setBirthdate"
				android:textSize="12px">
			</Button>

			<TextView
				android:id="@+id/bdateTxt1"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text=" ">
			</TextView>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>